--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,39 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f2f2f2 !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1{
+  margin: 0 !important;
+  font-size: 48px !important;
+  text-align: center !important;
+}
+
+h2{
+  font-size: 36px !important;
+}
+
+h3{
+  height: 20px !important;
+  margin: 0 !important;
+}
+
+h4{
+  margin-top: 10px;
+  height: 5px !important;
+}
+
+.dropDown{
+  height: 30px !important;
+  width: 200px !important;
+  border-radius: 5px !important;
+  border: none !important;
+  background-color: white !important;
+  box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.05);
 }
