--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,54 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Archivo', sans-serif;
+  font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f2f2f2 !important;
 }
 
+button{
+  border: none !important;
+  background-color: #f2f2f2 !important;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #DBAA2C;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #2E3A97;
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Archivo', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 h1{
   margin: 0 !important;
-  font-size: 48px !important;
+  font-size: 42px !important;
   text-align: center !important;
+  margin-bottom: 10px !important;
 }
 
 h2{
-  font-size: 36px !important;
+  font-size: 32px !important;
+  margin-top: 0 !important;
+  margin-bottom: 10px !important;
 }
 
 h3{
@@ -33,6 +61,16 @@ h4{
   height: 5px !important;
 }
 
+td h4{
+  margin: 0 !important;
+  height: 20px !important;
+}
+
+h5{
+  margin: 0 !important;
+  height: 20px;
+}
+
 .dropDown{
   height: 30px !important;
   width: 200px !important;
@@ -40,4 +78,86 @@ h4{
   border: none !important;
   background-color: white !important;
   box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.05);
+}
+
+.nav{
+  text-align: center;
+  position: fixed;
+  top: 0 !important;
+  left: 0 !important;
+  width: 25vh;
+  height: 100vh;
+  background-image: url(../src/img/branding.svg);
+  box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.05);
+
+}
+
+.Footer{
+  width: 100%;
+  height: 20vh;
+  background-color: #2b2b2b;
+}
+
+.Align_Left{
+  text-align: left;
+
+}
+
+.Align_Right{
+  text-align: Right;
+}
+
+.Align_Center{
+  text-align: center;
+}
+
+.tableFour{
+  width: 25%;
+}
+
+.tableThree{
+  width: 33.33%;
+}
+
+table{
+  width: 90%;
+}
+
+.overflow{
+  overflow: auto;
+}
+
+.maxHeight{
+  height: 130px;
+}
+
+.addBut{
+  margin-left: 80%;
+  margin-top: 10px;
+  width: 55px;
+  height: 55px;
+  background-image: url(../src/img/addBut.svg);
+  box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.05);
+  background-size: cover;
+}
+
+.inline{
+  display: inline-block;
+}
+
+.logo{
+  margin-left: 100px;
+  width: 10px;
+  height: 10px;
+  background-image: url(../src/img/Logo.svg);
+  background-size: cover;
+}
+
+a{
+  text-decoration: none !important;
+  color: black;
+}
+
+a:hover{
+  text-decoration: underline !important;
 }
