--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,21 @@ h3{
   margin: 0 !important;
 }
 
+input{
+  font-size: 16px !important;
+  height: 28px !important;
+  color: black !important;
+  font-weight: bold !important;
+  text-align: center;
+  margin: 0;
+  font-family: 'Archivo', sans-serif !important;
+  font-family: 'Lato', sans-serif !important;
+  -webkit-font-smoothing: antialiased !important;
+  -moz-osx-font-smoothing: grayscale !important;
+  font-family: 'Archivo', sans-serif;
+  font-family: 'Lato', sans-serif;
+}
+
 h4{
   margin-top: 10px;
   height: 5px !important;
@@ -132,14 +147,33 @@ table{
   height: 130px;
 }
 
+.add{
+  width: 100%;
+  height: 60px;
+}
+
 .addBut{
-  margin-left: 80%;
-  margin-top: 10px;
+  float: left;
   width: 55px;
   height: 55px;
   background-image: url(../src/img/addBut.svg);
   box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.05);
   background-size: cover;
+  cursor: pointer;
+}
+
+.addInput{
+  float: left;
+  padding-top: 0 !important;
+  margin: 0 !important;
+  border-radius: 5px;
+  background-color: white;
+  display: inline-block;
+  margin-right: 10px !important;
+  width: 120px;
+  height: 30px;
+  margin-top: 15px !important;
+  box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.05);
 }
 
 .inline{
