--- a/src/index.css
+++ b/src/index.css
@@ -87,13 +87,52 @@ h5{
 }
 
 .dropDown{
+  font-size: 18px !important;
+  font-weight: bold !important;
   height: 30px !important;
   width: 200px !important;
   border-radius: 5px !important;
   border: none !important;
-  background-color: #2e3a97;
-  color: white !important;
+  /* background-color: #2e3a97; */
+  background-color: white !important;
+  border: 2px solid #2e3a97 !important;
+  color: black !important;
   box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.05);
+}
+
+.SavingInput{
+  width: 210px;
+  height: 38px;
+}
+
+.dropDownI{
+  font-size: 18px !important;
+  font-weight: bold !important;
+  height: 30px !important;
+  width: 100px !important;
+  border-radius: 5px !important;
+  border: none !important;
+  /* background-color: #2e3a97; */
+  background-color: white !important;
+  border: 2px solid #2e3a97 !important;
+  color: black !important;
+  box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.05);
+}
+
+.Savings{
+  cursor: pointer;
+  font-size: 18px !important;
+  font-weight: bold !important;
+  width: 80px;
+  margin-left: 20px;
+  height: 34px !important;
+  background-color: white !important;
+  border-radius: 5px !important;
+  box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.05);
+}
+
+.Savings:hover{
+  box-shadow: 3px 3px 10px 0px rgba(0,0,0,0.1);
 }
 
 .nav{
@@ -172,8 +211,10 @@ table{
   margin-right: 10px !important;
   width: 120px;
   height: 30px;
-  margin-top: 15px !important;
+  margin-top: 12px !important;
   box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.05);
+  background-color: white !important;
+  border: 2px solid #2e3a97 !important;
 }
 
 .inline{
