--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,24 @@ body {
   display: inline-block;
 }
 
+.float{
+  float: left;
+}
+
 .HeadingTwo{
   text-align: center;
   width: 33%;
+}
+
+.CHECK{
+  margin-left: 20px !important;
+}
+
+p{
+  padding: 0;
+  margin: 0;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 input{
