--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,17 @@ body {
 }
 
 .Container{
-  width: 85%;
+  width: 83%;
   float: right;
 }
 
 .Title{
   width: 100%;
   text-align: center;
+}
+
+.TitleTwo{
+  text-align: center
 }
 
 .inline{
@@ -61,6 +65,18 @@ button{
   color: white;
 }
 
+select{
+  width: 110px;
+  height: 30px;
+  border-radius: 10px;
+  border: none;
+  background-color: #2E3A97;
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.08);
+  font-size: 16px;
+  color: white;
+  margin-left: 10px;
+}
+
 table{
   width: 100%;  
 }
@@ -72,3 +88,26 @@ table{
   color: white !important;
   margin-bottom: 10px;
 }
+
+.ModalContainer{
+  margin-top: 230px;
+  margin-left: 10%;
+  width: 50%;
+  height: 35vh;
+  background: #2b2b2b !important;
+  background-color: #3333337f;
+  position: fixed !important;
+  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.075);
+  border-radius: 10px;
+  text-align: center;
+  color: white !important;
+}
+
+.ModalTitle{
+  height: 3vh;
+}
+
+.ModalPar{
+  height: 19vh;
+}
+
